<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">AndroiLogictic</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_tuesday_3_may">Tuesday, 3 May</string>
    <string name="msg_tuesday_04_30p">Tuesday, 04:30pm</string>
    <string name="lbl_shop">Shop</string>
    <string name="lbl_hoodie">Hoodie</string>
    <string name="lbl_bag">Bag</string>
    <string name="msg_member_since_ma">Member Since May 2022</string>
    <string name="lbl_nike_benassi_n7">Nike Benassi N7</string>
    <string name="lbl_5_colours">5 Colours</string>
    <string name="lbl_best_sellers">Best Sellers</string>
    <string name="lbl_pullover_hoodie">Pullover Hoodie</string>
    <string name="lbl_home">Home</string>
    <string name="msg_your_nike_membe">Your Nike Member Rewards</string>
    <string name="lbl_basic_pedicure">Basic Pedicure</string>
    <string name="lbl_1_colours">1 Colours</string>
    <string name="lbl_us_170">US$170</string>
    <string name="msg_kode_transakasi">Kode Transakasi : TS-24932</string>
    <string name="lbl_berhasil">Berhasil</string>
    <string name="lbl_n7_collection">N7 Collection</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_pass">Pass</string>
    <string name="lbl_2_available">2 available</string>
    <string name="lbl_with_paty">with Paty</string>
    <string name="lbl_us_35">US$35</string>
    <string name="lbl_tambah_saldo">Tambah Saldo</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_29_nov">29 Nov</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_us_60">US$60</string>
    <string name="lbl_shoes">Shoes</string>
    <string name="lbl_5">$5</string>
    <string name="lbl_john_smith">John Smith</string>
    <string name="msg_hoodies_pullo">Hoodies &amp; Pullover</string>
    <string name="msg_cosmic_unity_3">Cosmic Unity 3 N7</string>
    <string name="lbl_tops_t_shirts">Tops &amp; T-Shirts</string>
    <string name="lbl_56_98">$56.98</string>
    <string name="lbl_all">All</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_12_30">12.30</string>
    <string name="lbl_favourites">Favourites</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_nike_sportswear">Nike Sportswear Club Fleece N7</string>
    <string name="msg_basketball_shoe">Basketball Shoes</string>
    <string name="lbl_orders">Orders</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_slides">Slides</string>
    <string name="lbl_inbox">Inbox</string>
    <string name="lbl_joggers">Joggers</string>
    <string name="lbl_view_message">View message</string>
    <string name="msg_total_portofoli">Total Portofolio </string>
    <string name="lbl_15_3">15.3%</string>
</resources>
