<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearProduct"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <FrameLayout android:id="@+id/frameStackfavorite"
            android:layout_gravity="start"
            android:layout_height="@dimen/_184pxv" android:layout_width="@dimen/_184pxh">
            <ImageView android:id="@+id/imageImage"
                android:layout_gravity="start"
                android:layout_height="@dimen/_184pxh"
                android:layout_width="@dimen/_184pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image_184x184}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image_184x184"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_white_a700_radius_17"
                android:id="@+id/btnFavorite"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_34pxh"
                android:layout_marginHorizontal="@dimen/_12pxh"
                android:layout_marginVertical="@dimen/_12pxv"
                android:layout_width="@dimen/_34pxh"
                android:paddingHorizontal="@dimen/_8pxh"
                android:paddingVertical="@dimen/_8pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_favorite_black_900" tools:ignore="ContentDescription"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtJordanEssentia"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_cosmic_unity_3"
            style="@style/txtHelveticaNowTextmedium14" tools:text="@string/msg_cosmic_unity_3"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtMensFleecePu"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_basketball_shoe"
            style="@style/txtHelveticaNowTextregular14" tools:text="@string/msg_basketball_shoe"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtColoursCounter"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_1_colours"
            style="@style/txtHelveticaNowTextregular14" tools:text="@string/lbl_1_colours"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_us_170"
            style="@style/txtHelveticaNowTextmedium14" tools:text="@string/lbl_us_170"/>
    </LinearLayout>
</layout>
