<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteSreen">
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStylewhite_A700">
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_7pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <LinearLayout android:id="@+id/linearRowjordanflighte"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_113pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.97"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtJordanFlightE"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.71"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_best_sellers"
                        style="@style/txtHelveticaNowTextmedium16" tools:text="@string/lbl_best_sellers"/>
                    <ImageView android:id="@+id/image24FadersHorizo"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginStart="@dimen/_63pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_24fadershorizo"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_24fadershorizo"/>
                    <ImageView android:id="@+id/image24MagnifyingGl"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_26pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_24magnifyinggl"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_24magnifyinggl"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearComplete"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <HorizontalScrollView android:fillViewport="true"
                android:id="@+id/horizontalScrollHorizontalscrollall"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:scrollbars="none">
                <LinearLayout android:id="@+id/linearTabbar"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnAll"
                        android:layout_height="@dimen/_56pxv"
                        android:layout_width="@dimen/_67pxh"
                        android:paddingBottom="@dimen/_16pxv"
                        android:paddingEnd="@dimen/_24pxh"
                        android:paddingStart="@dimen/_24pxh"
                        android:paddingTop="@dimen/_16pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_all"
                        android:textAllCaps="false"
                        style="@style/btnOutline" tools:text="@string/lbl_all"/>

                    <TextView
                        android:id="@+id/txtMen"
                        style="@style/txtHelveticaNowTextregular16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_weight="0.18"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_shoes"
                        tools:text="@string/lbl_shoes" />

                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMenOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginStart="@dimen/_48pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.43"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_tops_t_shirts"
                        style="@style/txtHelveticaNowTextregular16" tools:text="@string/lbl_tops_t_shirts"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMenTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginStart="@dimen/_48pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_hoodie"
                        style="@style/txtHelveticaNowTextregular16" tools:text="@string/lbl_hoodie"/>
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerComplete"
                itemSpace="@{@dimen/_1pxh}"
                android:layout_width="match_parent"
                android:layout_height="546dp"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/row_complete" />
        </LinearLayout>
        <FrameLayout android:gravity="bottom|start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylewhite_2">
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/buttonHome"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageHome"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_17pxh"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:textSize="12sp"
                        android:text="@string/lbl_home"
                        style="@style/txtHelveticaNowTextbold10" tools:text="@string/lbl_home"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/buttonWarehouse"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/image24ListMagnifyi"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_21pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_24listmagnifyi"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_24listmagnifyi"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:textSize="12sp"
                        android:text="@string/lbl_shop"
                        style="@style/txtHelveticaNowTextregular10" tools:text="@string/lbl_shop"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/buttonOrder"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageFavorite"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_width="@dimen/_19pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_favorite"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_favorite"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeThree"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:textSize="12sp"
                        android:text="@string/lbl_favourites"
                        style="@style/txtHelveticaNowTextregular10" tools:text="@string/lbl_favourites"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/buttonComplete"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/image24BagSimple"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_24bagsimple"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_24bagsimple"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeFour"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:textSize="12sp"
                        android:text="@string/lbl_bag"
                        style="@style/txtHelveticaNowTextregular10" tools:text="@string/lbl_bag"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/buttonProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/image24User"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_24user"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_24user"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeFive"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:textSize="12sp"
                        android:text="@string/lbl_profile"
                        style="@style/txtHelveticaNowTextregular10" tools:text="@string/lbl_profile"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>